updated index and error

--- a/first_node_server/public/index.html
+++ b/first_node_server/public/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>Welcome to DIT 1B06 nodejs demo! :)</h1>
+        <h1>Welcome to Node JS!!</h1>
     </body>
 </html>
