--- a/first_node_server/public/error.html
+++ b/first_node_server/public/error.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        File not found or server does not support post method!
+        File does not exist or web server does not support post method!
     </body>
 </html>
