--- a/firstFrontEnd/public/login.html
+++ b/firstFrontEnd/public/login.html
@@ -14,7 +14,7 @@
 
     <div class="login-form">
         <!--<form action="http://localhost:3001/profile.html"> -->
-        <form action="#"> 
+        <form action=""> 
             <h2 class="text-center">Log in</h2>       
             <div class="form-group">
                 <input type="text" class="form-control" id="email" placeholder="Username" required="required">
@@ -23,8 +23,8 @@
                 <input type="password" class="form-control" id="pwd" placeholder="Password" required="required">
             </div>
             <div class="form-group">
-                <!--<button type="submit" class="btn btn-primary btn-block" id="Login">Log in</button>-->
-                <button class="btn btn-primary btn-block" id="Login">Log in</button>
+                <button type="submit" class="btn btn-primary btn-block" id="Login">Log in</button>
+                <!--<button class="btn btn-primary btn-block" id="Login">Log in</button>-->
             </div>
             <div class="clearfix">
                 <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
